feat(geoserver): deploy GeoServer as a native service instead of Docker
Switches deploy_geoserver.sh's `geoserver` phase from a Docker container
to GeoServer's official standalone distribution (embedded Jetty 9.4),
running as a dedicated `geoserver` system user under a systemd unit the
script writes itself. Also switches the `postgres` phase's superuser
step (CREATE ROLE) to `sudo -u postgres psql` (peer auth) instead of
requiring a superuser password that was never set on this host.
INSTALL_PRODUCCION.md is updated to match: which machine each phase now
has to run on, dropped PG_SUPERUSER*, and the new admin bootstrap.

Motivation: running GeoServer in Docker's bridge network meant Postgres
had to be reached via the host's LAN IP instead of 127.0.0.1, which in
turn required opening pg_hba.conf to TCP auth for a superuser -- both
sidestepped now that GeoServer runs natively on the same host as
Postgres and shares its network namespace.

Along the way, hit and worked around two real GeoServer 2.26.2
constraints found by actually running it, not assumed up front:
- It's still built against javax.servlet (Servlet 4), so it does not
  run under Tomcat 10 (jakarta.servlet only) -- confirmed via a live
  ClassNotFoundException. Ubuntu no longer packages tomcat9, hence the
  move to GeoServer's own bundled-Jetty distribution instead of a WAR
  deploy.
- A fresh data dir no longer defaults to admin/geoserver; it generates
  a random admin password that's never revealed. bootstrap_admin_password
  now temporarily enables master-password login (the "root" pseudo-user)
  to rotate it via REST on first run only.

Also commits plugin/marlin.jar (the accelerated JAI renderer, previously
pulled from the Docker image) and updates plugin/build.sh to compile
against the native WEB-INF/lib path.

Verified end-to-end with `./deploy_geoserver.sh all`: role/schema
provisioning, native install, security config (role service + LDAP),
and the full allow/deny + WFS-T + updated_by verificatio